do massive polishing with intellij idea